--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,17 +4,16 @@ body {
     font-family: 'Arial', sans-serif;
     color: white;
     background-color: #1e1e1e;
+    background: url('/images/fondo2.png') no-repeat center center fixed;
+    background-size: cover; /* Ajusta la imagen para cubrir toda la pantalla */
 }
 
 .container {
     display: flex;
     height: 100vh;
     justify-items: center;
-    background: url('/images/wallpaperDamiancb.png') no-repeat center center/cover;
-    /* Imagen de fondo */
-    position: relative;
-}
 
+}
 
 .sidebar {
     display: flex;
@@ -26,11 +25,14 @@ body {
     background: #2e2e2e;
     padding: 20px;
     text-align: center;
+    opacity: 0.9;
 }
 
 .profile-pic {
-    width: 250px;
-    height: 200px;
+    /* display: flex; */
+    max-width: 250px;
+    max-height: 200px; 
+    object-fit: contain;
     border-radius: 50%;
     margin-bottom: 10px;
 }
