hover en sidebar, indicar posicion

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,11 @@ body {
     font-size: 25px;
 }
 
-.sidebar nav ul li a:hover {
+.sidebar nav ul li a.activo {
+    color: #9cfc97;
+}
+
+.sidebar nav ul li a:hover:not(.activo) {
     color: #9cfc97;
 }
 
